tests/NormalTests/paczka1/fuzzy1/59062261.err
Error in line 8: A505 A505 52,9
Error in line 10: A505 A936 43,9
Error in line 24: cHuD6 S73 40,1
Error in line 18: A505 A505 54,6
Error in line 29: KOsbUv A725 73,2
Error in line 21: lJB0R A725 13,0
Error in line 16: heFThIstc A936 86,4
